--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
@@ -1,27 +1,3 @@
-<!--
-    <h1 mat-dialog-title>
-    Add new Channel</h1>
-<div mat-dialog-content>
-    <p>Please enter the name of a Channel</p>
-    <mat-form-field>
-        <mat-label>Name</mat-label>
-        <input matInput [(ngModel)]="channelName">
-    </mat-form-field>
-</div>
-<div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">No Thanks</button>
-    <button mat-button [disabled]="channelName.length == 0" [mat-dialog-close]="channelName" cdkFocusInitial>Ok</button>
--->
-<!-- 
-    Dialog für die Erstellung eines neuen Channels
-
-    Status: nicht responsive
-    keine Funktion 
-
-    Bei Erstellung Übergabe an Firestore: Users, Type(channel oder message)
-    
-    André-->
-
 <div class="dialogContainer">
 
     <div class="headline">
@@ -45,10 +21,7 @@
         </mat-form-field>
 
         <div class="buttonWrap">
-            <button 
-                mat-button 
-                color="accent" 
-                [disabled]="channelName.length == 0"
+            <button mat-button color="accent" [disabled]="channelName.length == 0"
                 (click)="createNewChannel()">Erstellen
             </button>
         </div>
